--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
-include *.txt *.ini *.cfg *.rst
-recursive-include porygo_nz *.ico *.png *.css *.gif *.jpg *.pt *.txt *.mak *.mako *.js *.html *.xml
+include *.ini
+recursive-include porygo_nz *.mako
