Add a default SQLite db to the configs, and .gitignore.

--- a/development.ini
+++ b/development.ini
@@ -6,6 +6,8 @@
 [app:main]
 use = egg:porygo-nz
 
+sqlalchemy.url = sqlite:///%(here)s/porydex.sqlite
+
 pyramid.reload_templates = true
 pyramid.debug_authorization = false
 pyramid.debug_notfound = false
