--- a/production.ini
+++ b/production.ini
@@ -6,6 +6,8 @@
 [app:main]
 use = egg:porygo-nz
 
+sqlalchemy.url = sqlite:///%(here)s/porydex.sqlite
+
 pyramid.reload_templates = false
 pyramid.debug_authorization = false
 pyramid.debug_notfound = false
