--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,3 @@
 include *.ini
-recursive-include porygo_nz *.mako
+recursive-include porygo_nz/templates *.mako
+recursive-include porygo_nz/static *
